issue #1 - create homepage with sidebar and footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div style="display: flex;">
+    <%= render 'shared/sidebar' %>
+    <main><%= yield %></main>
+
+    <%= render 'shared/footer' %>
   </body>
 </html>
