added sidebar-icons and sidebar-folder

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,4 +1,13 @@
-<div class="sidebar">
+<div class="sidebar sidebar-icons">
+  <a href="/">
+    <%= image_tag('icon_home.svg', size: "40x40", alt: "Home") %>
+  </a>
+  <a href="/">
+    <%= image_tag('icon_profile.svg', size: "40x40", alt: "Profile") %>
+  </a>
+</div>
+
+<div class="sidebar sidebar-folders">
   <a href="/">
     <span>Home</span>
   </a>
