--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -24,15 +24,25 @@ body {
 
   & .sidebar {
     height: 100vh;
-    width: 12rem;
-    background-color: #262629;
 
-    & a {
-      color: lightgray;
-      text-decoration: none;
-      
-      &:hover {
-        background-color: #263238e5;
+    &-icons {
+      width: 2.7rem;
+      color: gray;
+      background-color: #303030;
+      color: red;
+    }
+
+    &-folders {
+      width: 14rem;
+      background-color: #262629;
+
+      & a {
+        color: lightgray;
+        text-decoration: none;
+        
+        &:hover {
+          background-color: #263238e5;
+        }
       }
     }
   }
