--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     margin-left: 4rem;
+    text-transform: lowercase;
 
     & > * {
       &::before {
